# AutoSage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  setup.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Native/MFEMDriver/: CMakeLists.txt  README.md  main.cpp
Native/MFEMDriver/Solvers/: AMRLaplace.cpp  AMRLaplace.hpp  AcousticWave.cpp  AcousticWave.hpp  Advection.cpp  Advection.hpp  AnisotropicDiffusion.cpp  AnisotropicDiffusion.hpp  CompressibleEuler.cpp  CompressibleEuler.hpp  DPGLaplace.cpp  DPGLaplace.hpp  DarcyFlow.cpp  DarcyFlow.hpp  Eigenvalue.cpp  Eigenvalue.hpp  Elastodynamics.cpp  Elastodynamics.hpp  ElectromagneticModal.cpp  ElectromagneticModal.hpp  ElectromagneticScattering.cpp  ElectromagneticScattering.hpp  Electromagnetics.cpp  Electromagnetics.hpp  Electrostatics.cpp  Electrostatics.hpp  FractionalPDE.cpp  FractionalPDE.hpp  HeatTransfer.cpp  HeatTransfer.hpp  Hyperelasticity.cpp  Hyperelasticity.hpp  IncompressibleElasticity.cpp  IncompressibleElasticity.hpp  JouleHeating.cpp  JouleHeating.hpp  LinearElasticity.cpp  LinearElasticity.hpp  Magnetostatics.cpp  Magnetostatics.hpp  (+10 more)
Native/MFEMDriver/tests/: ElectromagneticModalIntegrationTest.cpp  ElectromagneticScatteringIntegrationTest.cpp  IncompressibleElasticityIntegrationTest.cpp  JouleHeatingIntegrationTest.cpp  StructuralModalFallbackIntegrationTest.cpp  SurfacePDEIntegrationTest.cpp
Native/ngspice_ffi/: CMakeLists.txt  README.md  module.modulemap
Native/ngspice_ffi/include/: module.modulemap  ngspice_ffi.h
Native/ngspice_ffi/src/: ngspice_ffi.cpp
Native/open3d_ffi/: CMakeLists.txt  README.md  module.modulemap
Native/open3d_ffi/include/: module.modulemap  open3d_ffi.h
Native/open3d_ffi/src/: open3d_ffi.cpp
Native/pmp_ffi/: CMakeLists.txt  README.md  module.modulemap
Native/pmp_ffi/include/: module.modulemap  pmp_ffi.h
Native/pmp_ffi/src/: pmp_ffi.cpp
Native/quartet_ffi/: CMakeLists.txt  README.md  module.modulemap
Native/quartet_ffi/include/: module.modulemap  quartet_ffi.h
Native/quartet_ffi/src/: quartet_ffi.cpp
Native/truck_ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  module.modulemap
Native/truck_ffi/include/: module.modulemap  truck_ffi.h
Native/truck_ffi/src/: lib.rs
Native/vtk_ffi/: CMakeLists.txt  README.md  module.modulemap
Native/vtk_ffi/include/: module.modulemap  vtk_ffi.h
Native/vtk_ffi/src/: vtk_ffi.cpp
Sources/AutoSageControl/: main.swift
Sources/AutoSageCore/: AdminDashboard.swift  AgentOrchestrator.swift  Circuits.swift  Env.swift  JSONCoding.swift  JSONValue.swift  Jobs.swift  Models.swift  NgSpiceRunner.swift  ParametricCSG.swift  RequestIDGenerator.swift  Router.swift  SchemaBuilders.swift  SessionOrchestrator.swift  Sessions.swift  Tools.swift
Sources/AutoSageCore/OpenAPI/: openapi.json  openapi.yaml
Sources/AutoSageCore/Tools/: AMRLaplace.swift  Acoustics.swift  Advection.swift  AnisotropicDiffusion.swift  CFD.swift  CadImportTruck.swift  CompressibleFlow.swift  DPGLaplace.swift  Darcy.swift  DslFitOpen3D.swift  EchoJSON.swift  Eigenvalue.swift  Elastodynamics.swift  ElectromagneticModal.swift  ElectromagneticScattering.swift  Electromagnetics.swift  Electrostatics.swift  FEA.swift  FractionalPDE.swift  Heat.swift  Hyperelasticity.swift  IncompressibleElasticity.swift  JouleHeating.swift  Magnetostatics.swift  MeshRepairPMP.swift  Ngspice.swift  RenderPackVTK.swift  Stokes.swift  StructuralModal.swift  SurfacePDE.swift  TransientEM.swift  VolumeMeshQuartet.swift  WriteTextArtifact.swift
Sources/AutoSageServer/: AutoSageServerCommand.swift  main.swift
Sources/autosage/: main.swift
Tests/: test_ngspice.py  test_runner.py  test_server_integration.py
Tests/AutoSageCoreTests/: AutoSageCoreTests.swift  AutoSageIntegrationTests.swift  ServerProcessContractTests.swift  ToolServerContractTests.swift
autosage/: __init__.py  runner.py  server.py
autosage/tools/: __init__.py  ngspice.py
docs/: DEPENDENCIES.md  TOOLS.md  agent_orchestration.md  tool_plugins.md
frontend/: README.md  index.html  styles.css
frontend/src/: main.js  state.js  streamClient.js  viewport.js
openapi/: openapi.json  openapi.yaml
runs/job_0001/: result.json  summary.json
runs/job_0002/: error.json  result.json  summary.json
